[project]
name = "ai4mbse"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) QA System for MBSE Knowledge Graphs Based on LLM and Neo4j, with Support for SysML Model Parsing, Triple Extraction, and Intelligent Question Answering."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "fire",
    "langchain",
    "litellm",
    "rich",
    "langchain",
    "langchain_huggingface",
    "langchain_litellm",
    "langchain-neo4j",
    "langchain_openai",
    "neo4j",
    "hf_xet",
    "huggingface-hub",
    "python-multipart",
]
